--- a/TheCOOL.html
+++ b/TheCOOL.html
@@ -28,20 +28,20 @@
     </style>
   </head>
 
-  <body data-spy="scroll" data-target="#verticalScrollspy" data-offset="89">
+  <body data-spy="scroll" data-target="#verticalScrollspy data-offset="89">
     <div class="container-fluid hello">
       <div class="row">
         <!-- navbar  -->
-        <nav
+        <nav 
           class="col-12 col-sm-12 col-md-2 col-lg-2 col-xl-2"
-          id="verticalScrollspy"
+          id="verticalScrollspy"  data-spy="scroll"
         >
           <ul class="nav flex-column nav-pills nav-scroll">
             <li class="nav-item ">
               <a
                 title=" Click to see all modules"
                 class="nav-link active"
-                href="#section1"
+                href="#Apple"
               >
                 About COOL
               </a>
@@ -50,7 +50,7 @@
               <a
                 class="nav-link"
                 title="Testimonials of student and teachers"
-                href="#section2"
+                href="#AppleE"
               >
                 1. Resources for Teacher Education
               </a>
@@ -59,7 +59,7 @@
               <a
                 class="nav-link"
                 title="Support material to integrate CLIx OERs in the classroom"
-                href="#section3"
+                href="#AppleG"
               >
                 2. Ground Assessment - Research
               </a>
@@ -111,7 +111,7 @@
 
         <div class="col-12 col-sm-12 col-md  col-lg col-xl">
           <div data-spy="scroll" data-target="#verticalScrollspy">
-            <div id="section1" class="container-fluid py-3">
+            <div id="#Apple" class="container-fluid py-3">
               <h1>About Us</h1>
               <hr />
               <!-- <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
@@ -127,14 +127,15 @@
                       </div>
                     </div>
                   </div> -->
-              <div class="sec-1">
-                <h4>Our Response to COVID-19</h4>
+              <div class="sec-1" tabindex="">
                 <p>
                   As India faces a disruptive moment in education, teachers and
                   students have the challenge of continuing to teach and learn
                   during the lockdown. Technology can be an enabler in this
                   moment of crisis. We, at the Centre for Education Innovation
-                  and Action Research, bring to you a wide range of resources to
+                  and Action Research, bring to you a wide range of resources to  <div class="container-fluid hello">
+                    
+                    </div>
                   help you continue teaching and learning during this time.
                 </p>
                 <p>
@@ -156,7 +157,7 @@
             </div>
             <h4>Our Initiatives under COOL</h4>
 
-            <div class="section1" class="container-fluid py-5">
+            <div class="sectiontwo" class="container-fluid py-5">
               <div class="jumbotron some-dark py-5 ">
                 <h1 class="h1-responsive mt-n2">
                   1.Resources for Teacher Education
@@ -208,7 +209,7 @@
               </div>
             </div>
             <br />
-            <div class="section1" class="container-fluid py-5 mt-5">
+            <div class="section3" class="container-fluid py-5 mt-5">
               <div class="jumbotron some-dark py-5 ">
                 <h1 class="h1-responsive mt-n2">
                   2. Ground Assessment - Researc
@@ -245,7 +246,7 @@
                 </a>
               </div>
             </div>
-            <div class="section1" class="container-fluid py-5">
+            <div class="section4" class="container-fluid py-5">
               <div class="jumbotron some-dark py-5 ">
                 <h1 class="h1-responsive mt-n2">
                   3. Multilingual Webinars for school teachers and students by
@@ -278,7 +279,7 @@
                 </a>
               </div>
             </div>
-            <div class="section1" class="container-fluid py-5">
+            <div class="section5" class="container-fluid py-5">
               <div class="jumbotron some-dark py-5 ">
                 <h1 class="h1-responsive mt-n2">
                   4. Content Curation and creation- OER Repository
@@ -306,7 +307,7 @@
               </div>
             </div>
 
-            <div class="section1" class="container-fluid py-5">
+            <div class="section6" class="container-fluid py-5">
               <div class="jumbotron some-dark py-5 ">
                 <h1 class="h1-responsive mt-n2">
                   5.Online Course on ‘Technology for Connected Learning’ for
