--- a/TheCOOL.html
+++ b/TheCOOL.html
@@ -157,7 +157,7 @@
             </div>
             <h4>Our Initiatives under COOL</h4>
 
-            <div class="sectiontwo" class="container-fluid py-5">
+            <div class="" id="sec" class="container-fluid py-5">
               <div class="jumbotron some-dark py-5 ">
                 <h1 class="h1-responsive mt-n2">
                   1.Resources for Teacher Education
